[package]
name = "cometty"
version = "0.1.0"
edition = "2024"

[workspace]
resolver="2"
members = [
"crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["notelm"]
repository = "https://github.com/not-elm/cometty"
publish = false

[dependencies]
